# oqtopus-util

./: CITATION.cff  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml  labeler.yaml  python-publish.yaml  release.yaml
docs/: CONTRIBUTING.md  index.md
docs/developer_guidelines/: development_flow.md  setup.md
docs/usage/: config_util.md  di_container.md  getting_started.md
src/oqtopus_util/config/: __init__.py  config_util.py
src/oqtopus_util/di/: __init__.py  class_loader.py  di_container.py
src/oqtopus_util/grpc/: __init__.py  grpc_util.py
tests/oqtopus_util/config/: test_config_util.py
tests/oqtopus_util/di/: test_class_loader.py  test_di_container.py
tests/oqtopus_util/grpc/: test_grpc_util.py
